--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="/assets/images/premiereaudit-logo.jpg" class="logo">
                 </a>
                 <div class="navbar-nav">
-                    <a href="/#о_компании" class="link navbar-link">
+                    <a href="/#о-компании" class="link navbar-link">
                         О компании
                     </a>
                     <a href="/услуги" class="link navbar-link">
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="section">
-            <div id="о_компании" style="visibility: hidden; position: absolute; top: -200px;"></div>
+            <div id="о-компании" style="visibility: hidden; position: absolute; top: -200px;"></div>
             <div class="content">
                 <div class="section-header">
                     <h2>О нас</h2>
