--- a/контакты/index.html
+++ b/контакты/index.html
@@ -20,7 +20,7 @@
                     <img src="/assets/images/premiereaudit-logo.jpg" class="logo">
                 </a>
                 <div class="navbar-nav">
-                    <a href="/#о_компании" class="link navbar-link">
+                    <a href="/о-компании" class="link navbar-link">
                         О компании
                     </a>
                     <a href="/услуги" class="link navbar-link">
