--- a/о-компании/index.html
+++ b/о-компании/index.html
@@ -40,19 +40,21 @@
                 <div class="section-header">
                     <h2>ООО «Аудиторская компания «Премьер Аудит»</h2>
                     <p>
-                        создано в 2009 г. в городе Омске
+                        создана в 2009 г. в городе Омске
                     </p>
                 </div>
                 <p>
                     <em>ООО «АК «Премьер Аудит»</em>
-                    работает на рынке аудиторских и консультационных услуг и занимает одно из лидирующих
-                    мест в области аудита и профессионального консалтинга, что позволяет использовать методологические
-                    разработки и интеллектуальные ресурсы компании при оказании услуг нашим клиентам, и обращать особое
-                    внимание на налоговые аспекты деятельности хозяйствующих субъектов при проведении аудиторских
-                    проверок.
-                    В соответствии с требованиями Федерального закона «Об аудиторской деятельности» № 307-ФЗ от
-                    30.12.2008
-                    г.
+                    работает на рынке аудиторских и консультационных услуг
+                    в области аудита и профессионального консалтинга. Компания использует
+                    методологические разработки и интеллектуальные ресурсы, что позволяет оказывать
+                    услуги на высоком профессиональном уровне, обращая внимание также и на налоговые
+                    аспекты деятельности хозяйствующих субъектов при проведении аудиторских проверок.
+                </p>
+                <p>
+                    <em>ООО «АК «Премьер Аудит»</em>
+                    осуществляет деятельность в соответствии с требованиями
+                    Федерального закона «Об аудиторской деятельности» № 307-ФЗ от 30.12.2008 г.
                 </p>
                 <p>
                     <em>ООО «АК «Премьер Аудит»</em>
@@ -64,44 +66,34 @@
                     Аудиторская деятельность застрахована в соответствии с действующим законодательством.
                 </p>
                 <p>
-                    Аудиторская деятельность застрахована в соответствии с действующим законодательством.
-                    Наша компания оказывает аудиторские услуги на высоком профессиональном уровне и внедренная им и
-                    поддерживаемая на регулярной основе внутрифирменная система гарантии качества соответствует
-                    общероссийским
-                    правилам (стандартам) аудиторской деятельности, действует эффективно и достаточна для достижения
-                    целей в
-                    отношении гарантии качества и сдерживания риска.
+                    Внедренная и поддерживаемая на регулярной основе внутрифирменная система контроля
+                    качества соответствует общероссийским правилам (стандартам) аудиторской
+                    деятельности, действует эффективно и достаточна для достижения целей в отношении
+                    гарантии качества и сдерживания рисков.
                 </p>
                 <p>
-                    В соответствии с действующими нормативными документами в ООО «АК «Премьер Аудит» на высоком
-                    профессиональном
-                    уровне оказывает аудиторские и консалтинговые услуги. Специалисты фирмы ежегодно проходят обучение
-                    по
-                    программам повышения квалификации, утвержденным уполномоченным Федеральным органом. Сотрудниками
-                    фирмы
-                    применяются на практике научно-методические разработки по вопросам бухгалтерского, налогового и
-                    управленческого учета. Накопленный нами опыт, позволяют с высокой степенью эффективности проводить
-                    аудит
-                    крупного, среднего и малого бизнеса с учетом профиля, размеров и других особенностей аудируемых
-                    предприятий.
+                    Специалисты фирмы ежегодно проходят обучение по программам повышения
+                    квалификации, утвержденным уполномоченным Федеральным органом. Сотрудниками
+                    фирмы применяются на практике научно-методические разработки по вопросам
+                    бухгалтерского, налогового и управленческого учета.
                 </p>
                 <p>
-                    Аудиторская компания имеет многолетний опыт успешной реализации проектов для организаций различных
-                    форм
-                    собственности, видов деятельности и отраслей. Среди наших клиентов производственные и торговые
-                    компании,
-                    предприятия, работающие в разных секторах экономики: промышленное и гражданское строительство,
-                    рыболовство и
-                    переработка, энергетика и телекоммуникации, металлургическая и горнодобывающая промышленность,
-                    транспорт
-                    и
-                    логистика, наука и образование, пищевая промышленность, ЖКХ, гостиничный бизнес, медиасектор,
-                    оптовая и
-                    розничная торговля, морской, авиационный, железнодорожный и автомобильный транспорт и другие.
+                    Накопленный нами опыт, позволяют с высокой степенью эффективности проводить аудит
+                    крупного, среднего и малого бизнеса с учетом профиля, размеров и других особенностей
+                    аудируемых предприятий.
                 </p>
                 <p>
-                    Высокая квалификация специалистов нашей компании, обширный практический опыт, понимание отраслевых
-                    особенностей позволяют обеспечить качественное решение задач любой сложности. Принципы нашей работы:
+                    Аудиторская компания имеет многолетний опыт успешной реализации проектов для
+                    организаций различных форм собственности, видов деятельности и отраслей. Среди
+                    наших клиентов производственные и торговые компании, предприятия, работающие в
+                    разных секторах экономики: промышленное и гражданское строительство, рыболовство и
+                    переработка, энергетика и телекоммуникации, пищевая промышленность, ЖКХ,
+                    гостиничный бизнес, оптовая и розничная торговля и другие.
+                </p>
+                <p>
+                    Высокая квалификация специалистов нашей компании, обширный практический опыт,
+                    понимание отраслевых особенностей позволяют обеспечить качественное решение задач
+                    любой сложности. Принципы нашей работы:
                 <ul>
                     <li>независимость,</li>
                     <li>честность,</li>
@@ -111,39 +103,33 @@
                 </ul>
                 </p>
                 <p>
-                    Одним из отличий, выгодно выделяющих нашу фирму среди других аудиторских организаций, является то,
-                    что
-                    успешность работы аудиторов обеспечивается правовой поддержкой, которую осуществляют юристы,
-                    являющихся
-                    одновременно и учредителями фирмы. Огромный опыт работы с различными предприятиями, которым
-                    оказывалась
-                    всесторонняя помощь в ходе аудита и консалтинга, в том числе по вопросам минимизации
-                    налогообложения, по
-                    вопросам корпоративного права, связанным с минимизацией имущественных потерь в рамках банкротства и
-                    реорганизации предприятий, организации договорной работы предприятий с целью минимизации налоговых
-                    потерь,
-                    представительству и защите интересов предприятий в государственных органах и судах.
+                    Одним из отличий, выгодно выделяющих нашу фирму среди других аудиторских
+                    организаций, является то, что успешность работы аудиторов обеспечивается правовой
+                    поддержкой, которую осуществляют юристы, являющихся одновременно и учредителями
+                    фирмы. Наша компания имеет огромный опыт работы с различными предприятиями,
+                    которым оказывалась всесторонняя помощь в ходе аудита и консалтинга, в том числе по
+                    вопросам минимизации налогообложения, по вопросам корпоративного права, связанным
+                    с минимизацией имущественных потерь в рамках банкротства и реорганизации
+                    предприятий, организации договорной работы предприятий с целью минимизации
+                    налоговых потерь, представительству и защите интересов предприятий в государственных
+                    органах и судах.
                 </p>
                 <p>
-                    За годы практической работы в области аудита юристам приходилось, наряду с обжалованием
-                    ненормативных
-                    актов
-                    (решений) налоговых органов о доначислении сумм налогов, штрафов, пени, представлять интересы
-                    предприятий в
-                    отношениях с органами налоговой полиции, КРУ (включая обжалование предписаний и Уведомлений органов
-                    Федерального казначейства), а также в заседаниях Арбитражных судов с положительным для клиентов
-                    результатом.
+                    За годы практической работы в области аудита юристам приходилось, наряду с
+                    обжалованием ненормативных актов (решений) налоговых органов о доначислении сумм
+                    налогов, штрафов, пени, представлять интересы предприятий в отношениях с органами
+                    налоговой полиции, КРУ (включая обжалование предписаний и Уведомлений органов
+                    Федерального казначейства), а также в заседаниях Арбитражных судов с положительным
+                    для клиентов результатом.
                 </p>
                 <p>
-                    Все вышеизложенное гарантирует высокий уровень профессионального решения, конфиденциальность,
-                    комплексный
-                    подход к реализации целей и задач, поставленных Заказчиком перед специалистами ООО «АК «Премьер
-                    Аудит».
+                    Все вышеизложенное гарантирует высокий уровень профессионального решения,
+                    конфиденциальность, комплексный подход к реализации целей и задач, поставленных
+                    Заказчиком перед специалистами ООО «АК «Премьер Аудит».
                 </p>
                 <p>
-                    Главное в нашей работе – полный учет всех требований Заказчика и реальная помощь в решении
-                    возникающих
-                    проблем.
+                    Главное в нашей работе – полный учет всех требований Заказчика и реальная помощь в
+                    решении возникающих проблем.
                 </p>
             </div>
         </section>
@@ -355,6 +341,88 @@
                                 <div class="property-value">
                                     Киселева Ольга Владимировна <br />
                                     ИНН: 550207528427
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-100">
+                            <div class="property">
+                                <div class="property-name">
+                                    Размер доли уставного (складочного)
+                                    капитала аудиторской организации,
+                                    принадлежащей всем аудиторам этой
+                                    аудиторской организации
+                                </div>
+                                <div class="property-value">
+                                    51%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-100">
+                            <div class="property">
+                                <div class="property-name">
+                                    В том числе размер доли уставного
+                                    (складочного) капитала, принадлежащей
+                                    всем аудиторам, являющимся работниками
+                                    аудиторской организации по основному
+                                    месту работы
+                                </div>
+                                <div class="property-value">
+                                    51%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-100">
+                            <div class="property">
+                                <div class="property-name">
+                                    Перечень бенефициарных владельцев
+                                    аудиторской организации
+                                </div>
+                                <div class="property-value">
+                                    Киселева Ольга Владимировна, <br />
+                                    гражданство РФ, проживание РФ <br />
+                                    <br />
+                                    Евченко Светлана Александровна, <br />
+                                    гражданство РФ, проживание РФ
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-100">
+                            <div class="property">
+                                <div class="property-name">
+                                    Описание системы вознаграждения
+                                    руководства аудиторской организации,
+                                    руководителей аудита, в том числе
+                                    факторов, влияющих на размер их
+                                    вознаграждений
+                                </div>
+                                <div class="property-value">
+                                    Процедуры, применяемые в
+                                    аудиторской организации в
+                                    отношении оценки результативности,
+                                    вознаграждения и карьерного
+                                    продвижения (включая систему
+                                    материального поощрения) со стороны
+                                    аудиторской организации по
+                                    отношению к ее сотрудникам,
+                                    направлены на закрепление
+                                    безусловной приверженности
+                                    аудиторской организации качеству. <br />
+                                    Руководство аудиторской организации
+                                    для развития и поддержания должного
+                                    уровня подготовки и соблюдения
+                                    принципов этики установлена
+                                    многокомпонентная сдельно-
+                                    повременная система оплаты труда
+                                    работников АО в зависимости от
+                                    факторов их участия и качества
+                                    выполненной работы. <br />
+                                    Основными факторами,
+                                    оказывающими влияние на размер
+                                    вознаграждения руководителей аудита
+                                    является высокое качество
+                                    выполнения заданий,
+                                    профессиональная компетентность,
+                                    результаты аттестации.
                                 </div>
                             </div>
                         </div>
